<resources>
    <string name="app_name">MKOApp</string>
    <string name="main_feel">Каким ты себя ощущаешь сегодня?</string>
    <string name="avatar_image">Avatar</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Пароль</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="menu">Тут будет меню</string>
    <string name="music">Тут будет прослушивание</string>
    <string name="hello">ПРИВЕТ</string>
    <string name="hello_text">Наслаждайся отборочными.\nБудь внимателен.
Делай хорошо.</string>
    <string name="register_text">Еще нет аккаунта? Зарегистрируйтесь</string>
    <string name="exit">exit</string>
    <string name="register_there">Еще нет аккаунта? Зарегистрируйтесь</string>
</resources>