<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/login">

    <View
        android:id="@+id/logo"
        android:layout_width="43.41dp"
        android:layout_height="49dp"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/ic_logo"
        android:elevation="120dp"
        app:layout_constraintBottom_toTopOf="@+id/main_title"
        app:layout_constraintStart_toStartOf="@+id/main_title"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="296dp"
        android:backgroundTint="#BEC2C2"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#BEC2C2"
        android:textColorHighlight="#BEC2C2"
        android:textColorHint="#BEC2C2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passField"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:layout_marginTop="32dp"
        android:backgroundTint="#BEC2C2"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#BEC2C2"
        android:textColorHighlight="#BEC2C2"
        android:textColorHint="#BEC2C2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailField" />

    <TextView
        android:id="@+id/errField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/emailField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/signInButton"
        android:layout_width="321dp"
        android:layout_height="61dp"
        android:layout_marginTop="492dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sign_in_button" />

    <TextView
        android:id="@+id/register"
        android:layout_width="87dp"
        android:layout_height="29dp"
        android:layout_marginTop="576dp"
        android:clickable="true"
        android:gravity="top"
        android:text="@string/register"
        android:textAppearance="@style/register"
        app:layout_constraintBottom_toTopOf="@+id/profileButton"
        app:layout_constraintStart_toStartOf="@+id/signInButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/main_title"
        android:layout_width="87dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="184dp"
        android:gravity="top"
        android:text="@string/sign_in"
        android:textAppearance="@style/main_title"
        android:textFontWeight="500"
        app:layout_constraintBottom_toTopOf="@+id/errField"
        app:layout_constraintStart_toStartOf="@+id/emailField"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="321dp"
        android:layout_height="61dp"
        android:layout_marginTop="624dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_button" />

    <View
        android:id="@+id/leavesPic"
        android:layout_width="0dp"
        android:layout_height="421dp"
        android:alpha="0.3"
        android:background="@drawable/leaves"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>